# base-template

{{cookiecutter.repo_name}}/: .gitignore  README.md  cookiecutter.json
{{cookiecutter.repo_name}}/tests/functional/init/: test_import.feature  test_import.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: .gitignore  pyproject.toml
