[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"}
]
classifiers = [
  "{{ cookiecutter.development_status }}",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = []
description = "{{ cookiecutter.project_short_description }}"
dynamic = ["version"]
{% if cookiecutter.license != 'UNLICENSED' -%}
license = "{{ cookiecutter.license }}"
{% endif -%}
name = "{{ cookiecutter.friendly_name }}"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.repo_name }}"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/issues"
Source = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}"

[tool.cruft]
skip = [
  "src/{{ cookiecutter.project_slug }}/__about__.py",
  "src/{{ cookiecutter.project_slug }}/__init__.py",
  "tests/"
]